# box-strategy

./: .gitignore  CMakeLists.txt  README.md  config.json  config.json.template
src/: main.cpp
src/analysis/: CombinationAnalyzer.cpp  CombinationAnalyzer.hpp  MarketDepthAnalyzer.cpp  MarketDepthAnalyzer.hpp
src/auth/: AuthManager.cpp  AuthManager.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/market/: ExpiryManager.cpp  ExpiryManager.hpp  MarketDataManager.cpp  MarketDataManager.hpp
src/models/: BoxSpreadModel.cpp  BoxSpreadModel.hpp  InstrumentModel.cpp  InstrumentModel.hpp  OrderModel.cpp  OrderModel.hpp
src/risk/: FeeCalculator.cpp  FeeCalculator.hpp  RiskCalculator.cpp  RiskCalculator.hpp
src/trading/: OrderManager.cpp  OrderManager.hpp  PaperTrader.cpp  PaperTrader.hpp
src/utils/: HttpClient.cpp  HttpClient.hpp  Logger.cpp  Logger.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadPoolOptimizer.cpp  ThreadPoolOptimizer.hpp
